Projet GL/test/src/test/deca/context/valid/increment2/float-op-float-float.deca
// Test : type_arith_op(float, float) = float

// Resultats : 5.7

//Historique : cree le 09/01/2023

{
    float a,b,c;
    a = 2.2;
    b = 3.5;

    c = a + b;
}